fixed skills featurette alignment

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -206,7 +206,7 @@ body {
 }
 
 #skills {
-  margin-top: -90px;
+  margin-top: -60px;
   /*width: 10px;*/
 }
 
